[package]
name = "rust-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_image"
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
image = { version = "0.24.6", features = ["tga", "png"] }
